...
            }
            AnimatedVisibility(
                visible = buttonsVisible,
                enter = scaleIn(),
                exit = scaleOut()
            ) {
                SettingsButton(onSettingsClick = onSettingsClick, buttonScale = buttonScale)
            }
        }

        Column(
            verticalArrangement = Arrangement.SpaceBetween,
            horizontalAlignment = Alignment.End,
...
